--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,74 @@
+body{
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;    
+    margin: 0px;
+    padding: 0px;
+    @media (min-width: 992px) {
+        .column{
+            width: 30%;
+        }
+        div{
+            margin-left: 3%;
+        }
+    }
+    @media (min-width: 768px) and (max-width: 991px) {
+        .column{
+            position: relative;  
+            width: 45%;            
+        }
+        div{
+            margin-left: 5%;
+        }
+        #Clast{
+            width: 93%;
+        }
+    }
+    @media (max-width: 767px) {
+        .column{
+            width: 80%;
+            position: relative;
+        }
+        div{
+            margin-left: 15%;
+        }
+    }
+}        
+    h1{
+        text-align: center;        
+        margin-top: 5%;
+        margin-bottom: 8%;
+    }
+    .column { 
+        float: left;
+        background-color: #999898;
+        box-sizing: border-box;
+        border: black 3px solid;                    
+        margin-right: 3%;
+        margin-bottom: 5%;
+    }
+    section h2 {
+        text-align: center;
+        margin: 0px;
+        margin-left: 60%;          
+        padding: auto;
+        box-sizing: border-box;
+        border-bottom: black 3px solid;
+        border-left: black 3px solid;
+    }
+    section p {
+        padding: 10px;
+        margin: 0px;
+        text-align: justify;
+    }
 
+    .menu1{
+        background-color: #D59999;
+
+    }
+    .menu2{
+        background-color: #C14543;
+        color: #ffffff;
+    }
+    .menu3{
+        background-color: #E5D099;
+    }
