--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@ body{
     margin: 0px;
     padding: 0px;
 }
-header{
-    background-color: #c66868;
+#header-nav{
     color: #fff;
     padding: 12px;
-    margin: 0px;
-    text-align: left;
+    background-color: #c66868;
+    border-radius: 0%;
+    border: 0px;
+}
+.navbar-header h1{
+    margin: 20px;
+    align-items: center;
+    align-content: center;
 }
 header nav div {
     position: relative;
@@ -68,7 +73,10 @@ header nav div {
     #sections{        
         display: flex;
         margin-left: 3%;
-    }
+    }  
+    .navbar-nav{
+        display: none;
+    }  
 }
 /* Tablet version */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -89,7 +97,9 @@ header nav div {
         width: 100%;
         margin-right: 0%;
     }
-
+    .navbar-nav{
+        display: none;
+    }
 }
 /* Mobile version */
 @media (max-width: 767px) {
@@ -109,8 +119,8 @@ header nav div {
     }
     #navbarToggle{
         position: absolute;
-        bottom: 15px;
-        right: 15px;
+        bottom: 29%;
+        right: 20px;
         display: block;
         justify-content: end;
         background-color: #c66868;
@@ -126,16 +136,21 @@ header nav div {
         font-size: 1em;
         margin-right: 5px;
     }
-    .barra ul{
-        text-decoration: none;
-            align-content: center;
-    justify-content: center;
+    #nav-list{
+        margin-top: 10px;
     }
-    #navbarToggle:hover{
-        background-color: #aa5656;
-        #collapsable-nav a:hover{
-            display: block;
-        }
-        
+    #nav-list a{
+        padding: 10px;
+        margin: 0px;
+        text-align: center;
+        background-color: #c66868;
+        color: #fff;
+    }
+    #nav-list a {
+        font-size: 1.2em;
+    }
+    #nav-list a:hover, 
+    #navbarToggle:hover { 
+    background-color: #aa5656;
     }
 }        
